--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,8 @@
 html {
   height: 100%;
   overflow: hidden;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
 }
 
 body { 
