--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
 html {
   height: 100%;
   overflow: hidden;
-  overflow-y: scroll; /* has to be scroll, not auto */
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
 
@@ -111,6 +111,7 @@ body {
   transform-style: preserve-3d;
   height: 100%;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   overflow-x: hidden;
   font-family: "Montserrat";
 }
