--- a/css/style.css
+++ b/css/style.css
@@ -12,29 +12,21 @@
 
 @media (max-width: 769px) {
     #bg .title {
-        padding-top: 110px;
-        text-align: center;
-        font-size: 2em;
-        font-weight: 100;
-        color: white;
-        font-family: "Helvetica Neue", sans-serif;
+	   font-size: 2em;
     }
 }
 
 .slide {
     position: relative;
     min-height: 100vh;
-    width: 100vw;
-    transform-style: inherit;
 }
 
 .slide:before {
-    content: "";
     position: absolute;
     top: 0;
     bottom: 0;
-    left:0;
-    right:0;
+    left: 0;
+    right: 0;
 }
 
 .slide, .slide:before {
@@ -49,7 +41,6 @@
 #githubbanner {
     background-image: url("../images/stardust.png");
     background-attachment: fixed;
-    position: relative;
     line-height: 480px;
 }
 
@@ -75,22 +66,13 @@
     font-family: "Helvetica Neue", sans-serif;
     position: relative;
     min-height: 100vh;
-    width: 100vw;
-    transform-style: inherit;
 }
 
 @media (max-width: 769px) {
     #columbia .title {
-        padding-top: 110px;
-        text-align: center;
-        font-size: 2.5em;
-        font-weight: 100;
-        color: white;
-        font-family: "Helvetica Neue", sans-serif;
+	   font-size: 2.5em;
     }
 }
-
-
 
 
 
@@ -98,22 +80,12 @@
 -------------------------------------------------- */
 
 html {
-  height: 100%;
-  overflow: hidden;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+    -webkit-overflow-scrolling: touch;
 }
 
-body { 
-  margin:0;
-  padding:0;
-  perspective: 1px;
-  transform-style: preserve-3d;
-  height: 100%;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-  overflow-x: hidden;
-  font-family: "Montserrat";
+body {
+	-webkit-overflow-scrolling: touch;
+	font-family: "Montserrat";
 }
 
 body a,visited {
@@ -122,11 +94,9 @@ body a,visited {
 }
 
 * {
-margin: 0;
-padding: 0;
+	margin: 0;
+	padding: 0;
 }
-
-
 
 
 
@@ -161,11 +131,11 @@ padding: 0;
 
 @media (max-width: 769px) {
     .trifold p {
-        font-weight: 100;
-        font-size: 1.5em;
-        font-family: "Helvetica Neue";
-        text-align: center;
-        margin: 70px 0px;
+	   font-weight: 100;
+	   font-size: 1.5em;
+	   font-family: "Helvetica Neue";
+	   text-align: center;
+	   margin: 70px 0px;
     }
 }
 
@@ -182,36 +152,28 @@ padding: 0;
     padding: 50px 0px;
 }
 
-@media (min-width: 769px) {
-	.col {
-	    float: left;
-	    width: 33.333333333333333333333333%;
-	    margin-left: 0px;
-	    margin-right: 0px;
-	    padding-left: 0px;
-	    padding-right: 0px;
-	    text-align: center;
-	    min-width: 200px;
-	}
+.col {
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 0px;
+	padding-right: 0px;
+	margin-bottom: 50px;
+	text-align: center;
+	min-width: 200px;
 }
 
-@media (max-width: 769px) {
-	.col {
-	    margin-left: auto;
-	    margin-right: auto;
-	    padding-left: 0px;
-	    padding-right: 0px;
-	    margin-bottom: 50px;
-	    text-align: center;
-	    min-width: 200px;
-	}
+@media (min-width: 769px) {
+    .col {
+		float: left;
+		margin-left: 0px;
+		margin-right: 0px;
+		width: 33.333333333333333333333333%;
+    }
 }
 
 .clear {
     clear:both;
 }
-
-
 
 
 
@@ -225,21 +187,6 @@ padding: 0;
     overflow: hidden;
 }
 
-/*.trifoldbutton:hover {
-    border-radius: 50%;
-    border: solid 6px #297ACC;
-}*/
-
-.trifoldbutton-active {
-    border-radius: 50%;
-    display: inline-block;
-    border: solid 6px #297ACC;
-    transition: all .3s ease-in-out;
-    overflow: hidden;
-}
-
-
-
 
 
 /* BANNERS
@@ -249,7 +196,7 @@ padding: 0;
     padding-top: 150px;
     padding-bottom: 30px;
     height: 300px;
-    color: #fff;
+    color: #FFFFFF;
     font-weight: 400;
     font-family: "Montserrat","Helvetica Neue";
     text-align: center;
@@ -265,7 +212,7 @@ padding: 0;
 
 @media (max-width: 769px) {
     .bannertitle {
-        font-size: 2.5em;
+		font-size: 2.5em;
     }
 }
 
@@ -273,23 +220,16 @@ padding: 0;
     text-align: center;
     font-size: 2.1em;
     border: 2px solid;
-    border-color: #fff;
-
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10%;
-    padding-right: 10%;
+    border-color: #FFFFFF;
+    margin: 0 auto;
+    padding: 10px 10%;
     border-radius: 15px;
 }
 
 .bannerbutton:hover {
-    background-color: #fff;
-    border-color: #fff;
+    background-color: #FFFFFF;
+    border-color: #FFFFFF;
 }
-
-
 
 
 
@@ -330,8 +270,6 @@ padding: 0;
 
 
 
-
-
 /* CONTACT SECTION
 -------------------------------------------------- */
 
@@ -363,7 +301,7 @@ padding: 0;
 .footer {
     padding-top: 0px;
     padding-bottom: 8px;
-    background-color: #fff;
+    background-color: #FFFFFF;
 }
 
 .footer hr {
@@ -391,6 +329,6 @@ Light Blue: #91C8FF
 Dark Blue: #297ACC
 Purple: #4A4AB8
 Light Tan: #F1EDF1
-Orange: #FFA347;
+Orange: #FFA347
 
 */
