--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -56,7 +56,7 @@ body {
 	display: none;
 	text-align: center;
 	padding: 50px;
-	height: auto;
+	height: 250px;
 	border-radius: 12px;
 	background-color: #FFFFFF;
 	font-family: "Cabin", "Helvetica Neue", sans-serif;
@@ -69,11 +69,12 @@ body {
 	font-family: "Montserrat", "Helvetica Neue", sans-serif;
 	display: inline-block;
 	border-radius: 12px;
-	width: 20%;
-	padding: 50px 10px 50px 10px;
-	margin: 0 15px 0 15px;
+	width: 16%;
+	min-width: 125px;
+	padding: 50px 20px 50px 20px;
+	margin: 45px 10px 0 10px;
 	background-color: #788CD3;
-	font-size: 2.2rem;
+	font-size: 1.8rem;
 	color: #FFFFFF;
 }
 
@@ -162,7 +163,24 @@ body {
     to {transform:rotate(00deg);}
 }
 
-@media (max-width: 769px) {
+@media (max-width: 1024px) {
+	.tab {
+		font-size: 1.4rem;
+	}
+
+	.project {
+		display: block;
+		width: 90%;
+		padding: 15px 0 15px 0;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 15px;
+		margin-bottom: 15px;
+		font-size: 1.5rem;
+	}
+}
+
+@media (max-width: 768px) {
 	.title {
 		padding-top: 30px;
 		font-size: 3rem;
@@ -184,14 +202,11 @@ body {
 	.tab {
 		padding: 25px;
 		height: 220px;
-		font-size: 1rem;
+		font-size: 1.2rem;
 	}
 
 	.project {
-		display: block;
-		width: 100%;
+		width: 80%;
 		padding: 10px 0 10px 0;
-		margin: 10px 0 10px 0;
-		font-size: 1.5rem;
 	}
 }
