--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -88,7 +88,7 @@ body {
 }
 
 .mediabutton:hover {
-	background-color: #A4D8E2;
+	background-color: #ACCCCC;
 }
 
 .github {
@@ -206,7 +206,6 @@ body {
 	}
 
 	.project {
-		width: 80%;
 		padding: 10px 0 10px 0;
 	}
 }
