Refine conclusion flow

--- a/magic/style.css
+++ b/magic/style.css
@@ -1,5 +1,8 @@
 .container {
 	text-align: center;
+	margin-top: 80px;
+	margin-left: 15%;
+	width: 70%;
 }
 
 .instructions {
@@ -11,21 +14,20 @@
 
 .btn {
 	margin: 50px;
-	height: 100px;
+	height: 80px;
 	width: 300px;
 	font-size: 30px;
 	font-family: Helvetica;
 	font-weight: 100;
 }
 
-#again {
+#conclusion {
 	display: none;
 }
 
 #output {
-	margin-top: 100px;
-	margin-bottom: 50px;
-	font-size: 30px;
+	margin: 50px;
+	font-size: 40px;
 	font-family: Helvetica;
 	font-weight: 100;
 	color: green;
@@ -33,4 +35,9 @@
 
 .counter {
 	margin-bottom: 30px;
+}
+
+.card-input {
+	margin: 4px;
+	width: 60%;
 }
