--- a/magic/style.css
+++ b/magic/style.css
@@ -38,6 +38,7 @@
 }
 
 .card-input {
+	text-align: center;
 	margin: 4px;
 	width: 60%;
 }
@@ -47,6 +48,17 @@
 		margin: 0;
 		padding: 0;
 		width: 100%;
+	}
+
+	.instructions {
+		margin: 10px;
+		font-size: 20px;
+	}
+
+	.card-input {
+		width: 80%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	.btn {
