--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -48,8 +48,9 @@ body {
 }
 
 .tabcontainer {
+	margin-left: 20%;
+	width: 60%;
 	text-align: center;
-	padding: 0px 150px;
 }
 
 .tab {
@@ -88,11 +89,7 @@ body {
 }
 
 .mediabutton:hover {
-	background-color: #CCCCCC;
-}
-
-.github {
-	padding-bottom: 30px;
+	background-color: #EEEEEE;
 }
 
 .cube1 {
@@ -196,7 +193,8 @@ body {
 	}
 
 	.tabcontainer {
-		padding: 0px 25px;
+		margin-left: 10%;
+		width: 80%;
 	}
 
 	.tab {
