--- a/css/base.css
+++ b/css/base.css
@@ -105,8 +105,8 @@ body {
 }
 
 .talk {
-	margin-top: 10px;
-	margin-bottom: 35px;
+	margin-bottom: 25px;
+	font-family: "Montserrat", "Helvetica Neue";
 }
 
 .contact {
