--- a/css/base.css
+++ b/css/base.css
@@ -19,8 +19,9 @@ h1 {
 	text-align: center;
 	font-size: 5.4rem;
 	font-weight: 300;
+	font-weight: 1;
 	color: #FFFFFF;
-	font-family: "Helvetica Neue", sans-serif;
+	font-family: "Montserrat", "Helvetica Neue", sans-serif;
 	text-decoration: none;
 }
 
@@ -29,7 +30,6 @@ h1 {
 }
 
 /* Navigation */
-
 .nav-container {
 	text-align: center;
 	padding: 50px 0px 60px 0px;
@@ -318,7 +318,7 @@ hr {
 	}
 
 	.talk-description {
-		padding: 12px 10px;
+		padding: 12px 4px;
 		font-size: .9rem;
 	}
 
