--- a/css/timeline.css
+++ b/css/timeline.css
@@ -26,8 +26,8 @@
 .event-description {
 	text-align: left;
 	margin-top: 15px;
-	font-family: "Lato";
-	font-weight: 200;
+	font-family: "Helvetica Neue", "Lato";
+	font-weight: 300;
 	font-size: 1.5rem;
 	position: inline-block;
 	margin-right: 5%;
