Add hover underlines to links

--- a/css/base.css
+++ b/css/base.css
@@ -92,10 +92,11 @@ hr {
 
 .colored-link {
 	color: #006BDF;
+	border-bottom: 2px solid transparent;
 }
 
 .colored-link:hover {
-	color: #0062FF;
+	border-bottom: 2px solid #006BDF;
 }
 
 /* Projects */
@@ -130,6 +131,10 @@ hr {
 
 .underlined-link {
 	text-decoration: underline!important;
+}
+
+.underlined-link:hover {
+	color: #006BDF;
 }
 
 /* Contact */
