--- a/css/base.css
+++ b/css/base.css
@@ -10,7 +10,7 @@ a:link {
 }
 
 body {
-	background-image: url("../images/stardust.png");
+	background-image: url("../img/stardust.png");
 	background-attachment: fixed;
 	background-color: #444348;
 }
