--- a/css/base.css
+++ b/css/base.css
@@ -57,10 +57,10 @@ h2:hover {
 }
 
 .tab-container {
-	margin-left: 20%;
-	width: 60%;
-	text-align: center;
-	padding-bottom: 50px;
+	width: 100%;
+	max-width: 60rem;
+	margin: 1rem auto;
+	font-family: "Montserrat", "Helvetica Neue";
 }
 
 .tab {
@@ -244,23 +244,6 @@ hr {
 
 
 /* Responsiveness */
-@media (max-width: 1024px) {
-	.tab {
-		font-size: 1.4rem;
-	}
-
-	.project {
-		display: block;
-		width: 90%;
-		padding: 15px 0 15px 0;
-		margin-left: auto;
-		margin-right: auto;
-		margin-top: 15px;
-		margin-bottom: 15px;
-		font-size: 1.5rem;
-	}
-}
-
 @media (max-width: 768px) {
 	h1 {
 		margin-top: 20px;
@@ -279,8 +262,6 @@ hr {
 
 	.tab-container {
 		padding-top: 20px;
-		margin-left: 5%;
-		width: 90%;
 	}
 
 	.tab {
@@ -297,29 +278,6 @@ hr {
 	.divide {
 		padding-top: 20px;
 		height: 20px;
-	}
-
-	/* Talks */
-	#talks-div {
-		padding: 20px;
-	}
-
-	.talk-container {
-		margin-bottom: 25px;
-	}
-
-	.talk-description {
-		padding: 12px 4px;
-		font-size: .9rem;
-	}
-
-	/* Projects */
-	#projects-div {
-		min-height: 220px;
-	}
-
-	.project {
-		padding: 10px 0 10px 0;
 	}
 
 	/* Contact */
