--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,7 @@
 	margin: 0;
 	padding: 0;
 	color: inherit;
+	overflow-x: hidden;
 }
 
 a:link {
@@ -268,6 +269,7 @@ hr {
 		padding: 25px;
 		min-height: 0px;
 		font-size: 1rem;
+		border-radius: 0px;
 	}
 
 	/* About */
