--- a/css/timeline.css
+++ b/css/timeline.css
@@ -26,13 +26,19 @@
 .event-description {
 	text-align: left;
 	margin-top: 15px;
-	font-family: "Helvetica Neue", "Lato";
-	font-weight: 300;
+	font-family: "Montserrat", "Helvetica Neue", "Lato";
 	font-size: 1.5rem;
 	position: inline-block;
 	margin-right: 5%;
 	width: 55%;
 	float: right;
+	color: #222222;
+}
+
+.event-date {
+	padding-top: 6px;
+	font-size: 1.2rem;
+	color: #444444;
 }
 
 @media (max-width: 768px) {
@@ -43,6 +49,11 @@
 
 	.event-description {
 		font-size: .85rem;
+	}
+
+	.event-date {
+		padding-top: 4px;
+		font-size: .6rem;
 	}
 
 	.event-image {
