--- a/css/base.css
+++ b/css/base.css
@@ -118,7 +118,7 @@ hr {
 	width: 16%;
 	min-width: 125px;
 	padding: 50px 20px 50px 20px;
-	margin: 45px 10px 0 10px;
+	margin: 45px 10px 445px 10px;
 	background-color: #788CD3;
 	font-size: 1.8rem;
 	color: #FFFFFF;
