--- a/css/base.css
+++ b/css/base.css
@@ -25,9 +25,9 @@ h1 {
 	text-decoration: none;
 }
 
-.one-viewport {
+/* .one-viewport {
 	height: 1vh;
-}
+} */
 
 /* Navigation */
 .nav-container {
@@ -78,6 +78,8 @@ h2:hover {
 /* About */
 #about-div {
 	padding-top: 100px;
+	padding-bottom: 100px;
+	margin-bottom: 100px;
 }
 
 .divide {
